1998-06-01  Assar Westerlund  <assar@sics.se>
	and Ian Lance Taylor  <ian@cygnus.com>

	* client.c: If HAVE_GSSAPI_H, include <gssapi.h>.  Only include
	<gssapi/gssapi.h> if HAVE_GSSAPI_GSSAPI_H.  Only include
	<gssapi/gssapi_generic.h> if HAVE_GSSAPI_GSSAPI_GENERIC_H.
	(GSS_C_NT_HOSTBASED_SERVICE): Define if not defined.
	(connect_to_gserver): Use GSS_C_NT_HOSTBASED_SERVICE instead of
	gss_nt_service_name.
	* server.c: Same header file changes.
	(GSS_C_NT_HOSTBASED_SERVICE): Define if not defined.
	(gserver_authenticate_connection): Use GSS_C_NT_HOSTBASED_SERVICE
	instead of gss_nt_service_name.

1998-06-01  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (tag8k): Add a test for the 1998-05-02 rcs.c bug fix.

1998-05-26  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (annotate): Call tag_check_valid like the other functions
	which have a -r option.
	* sanity.sh (ann): New test ann-14 tests for this.

1998-05-24  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (importc): New tests importc-5 through importc-8 test
	for a (fairly obscure) regression from CVS 1.9.

1998-05-23  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modules2): Add comment listing cvs release tests.
	(info): New test info-cleanup-0 tests "cvs -n release".

	* rcs.c (rcsbuf_getid): Remove semicolon at end of #undef.  I'm
	kind of surprised that compilers accepted this at all, but
	removing it squelches a warning for some compilers.

	* version.c: Change version number to 1.9.28.1.

	* Version 1.9.28.

1998-05-22  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_cmp_file): Check for errors from CVS_FOPEN.  This
	restores the CVS 1.9 behavior (fatal error if we can't open the
	file), and corrects an apparent oversight in Ian's 13 Apr 1997
	change.
	* sanity.sh (modes2): New test, tests for this.

1998-05-22  Ian Lance Taylor  <ian@cygnus.com>

        * server.c (server_updated): Correct test for whether to unlink
        the file.
