@@ -111,6 +111,10 @@ fileattr_read ()
 	    Node *newnode;
 
 	    p = strchr (line, '\t');
+	    if (p == NULL)
+		error (1, 0,
+		       "file attribute database corruption: tab missing in %s",
+		       fname);
 	    *p++ = '\0';
 	    newnode = getnode ();
 	    newnode->type = FILEATTR;
@@ -130,6 +134,10 @@ fileattr_read ()
 	    /* Currently nothing to skip here, but for future expansion,
 	       ignore anything located here.  */
 	    p = strchr (line, '\t');
+	    if (p == NULL)
+		error (1, 0,
+		       "file attribute database corruption: tab missing in %s",
+		       fname);
 	    ++p;
 	    fileattr_default_attrs = xstrdup (p);
 	}
